# Student-Performance-Prediction-System

./: README  app.py  pyproject.toml  requirements.txt  setup.py
src/: exception.py  logger.py  utils.py
src/components/: data_ingetion.py  model_trainer.py
src/pipelines/: prediction_pipeline.py
templates/: home.html
